# ghcjs-test-stack-linking

./: .gitignore  README.md  app1.html  app2.html  stack.yaml  test-ghcjs.cabal
app1/: Main.hs  Main.js_hi  Main.js_o
app2/: Main.hs
dummy/: Main.js_hi  Main.js_o
src/: Lib.hs
