name:                test-ghcjs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/test-ghcjs#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          james.haver@plowtech.net
copyright:           2016 Plow Technologies
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4 && < 5

executable dummy
  default-language:     Haskell2010
  hs-source-dirs:       dummy
  ghc-Options:          -Wall -O2
  main-is:              Main.hs
  build-depends:        base >= 4 && < 5
                      , test-ghcjs

executable app1
  default-language:     Haskell2010
  hs-source-dirs:       app1
  ghc-Options:          -Wall -O2
  main-is:              Main.hs
  build-depends:        base >= 4 && < 5
                      , test-ghcjs

executable app2
  default-language:     Haskell2010
  hs-source-dirs:       app2
  ghc-Options:          -Wall -O2
  main-is:              Main.hs
  build-depends:        base >= 4 && < 5
                      , test-ghcjs

source-repository head
  type:     git
  location: https://github.com/plow-technologies/test-ghcjs
